Added script to listen for buttons

--- a/index.html
+++ b/index.html
@@ -49,5 +49,7 @@
         <footer>
             <p>Copyright © 2024 CodingGoat. All Rights Reserved.</p>
         </footer>
+
+        <script src="script.js"></script>
     </body>
 </html>
