first working version prob needs polishing

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <div class="calc_container">
 
             <div class="calc_display">
-                <div class="calc_op_last">8 + 8</div>
-                <div class="calc_op_current">16</div>
+                <div class="calc_op_last"></div>
+                <div class="calc_op_current"></div>
             </div>
 
             <div class="calc_numpad">
@@ -29,7 +29,7 @@
                     <button>4</button>
                     <button>5</button>
                     <button>6</button>
-                    <button>x</button>
+                    <button>*</button>
                 </div>
                 <div>
                     <button>7</button>
