--- a/index.html
+++ b/index.html
@@ -16,32 +16,32 @@
 
             <div class="calc_numpad">
                 <div class="calc_functions">
-                    <button>Clear</button>
-                    <button>Delete</button>
+                    <button class="clear-btn">Clear</button>
+                    <button class="del-btn">Delete</button>
                 </div>
                 <div>
-                    <button>1</button>
-                    <button>2</button>
-                    <button>3</button>
-                    <button>÷</button>
+                    <button class="num-btn">1</button>
+                    <button class="num-btn">2</button>
+                    <button class="num-btn">3</button>
+                    <button class="operator-btn">÷</button>
                 </div>
                 <div>
-                    <button>4</button>
-                    <button>5</button>
-                    <button>6</button>
-                    <button>*</button>
+                    <button class="num-btn">4</button>
+                    <button class="num-btn">5</button>
+                    <button class="num-btn">6</button>
+                    <button class="operator-btn">*</button>
                 </div>
                 <div>
-                    <button>7</button>
-                    <button>8</button>
-                    <button>9</button>
-                    <button>-</button>
+                    <button class="num-btn">7</button>
+                    <button class="num-btn">8</button>
+                    <button class="num-btn">9</button>
+                    <button class="operator-btn">-</button>
                 </div>
                 <div>
-                    <button>.</button>
-                    <button>0</button>
-                    <button>=</button>
-                    <button>+</button>
+                    <button class="point-btn">.</button>
+                    <button class="num-btn">0</button>
+                    <button class="evaluate-btn">=</button>
+                    <button class="operator-btn">+</button>
                 </div>
             </div>
         </div>
