--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <div>
                     <button class="point-btn">.</button>
                     <button class="num-btn">0</button>
-                    <button class="evaluate-btn">=</button>
+                    <button class="calculate-btn">=</button>
                     <button class="operator-btn">+</button>
                 </div>
             </div>
