Fixed a bug were the calculator would give an error if first operand was zero will attemting to do a calculation

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
             <div class="calc_display">
                 <div class="calc_op_last"></div>
-                <div class="calc_op_current"></div>
+                <div class="calc_op_current">0</div>
             </div>
 
             <div class="calc_numpad">
