--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <button class="num-btn">4</button>
                     <button class="num-btn">5</button>
                     <button class="num-btn">6</button>
-                    <button class="operator-btn">*</button>
+                    <button class="operator-btn">x</button>
                 </div>
                 <div>
                     <button class="num-btn">7</button>
