--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="styles.css" />
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto"/>
         <title>Calculator</title>
     </head>
     <body>
         <div class="calc_container">
-
             <div class="calc_display">
                 <div class="calc_op_last"></div>
                 <div class="calc_op_current">0</div>
